--- a/chatapp.html
+++ b/chatapp.html
@@ -41,7 +41,7 @@
             from "https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.2/firebase-database.js";
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "",
+            apiKey: "AIzaSyBaiEagDuT64S3xdIw_hUIhr00HMTkNJ3Q",
             authDomain: "chat-app-demo-2be65.firebaseapp.com",
             projectId: "chat-app-demo-2be65",
             storageBucket: "chat-app-demo-2be65.appspot.com",
