--- a/JS competition/Mcd mater.html
+++ b/JS competition/Mcd mater.html
@@ -36,13 +36,13 @@
 
 
     <main>
-        <div class="weight_history">
+        <div id="weight_history">
             <div class="recordinput">
                 <!-- 日付 <input type="date" id="date" size=""> -->
-                本日の体重 <input type="number" id="weight" size="30">
+                本日の体重は何㎏？ <input type="number" id="weight" size="30">
                 <!-- 身長 <input type="number" id="height"> -->
                 <button id="send">送信</button>
-                基礎代謝 <textarea name="" id="taisha" cols="10" rows="1"></textarea>
+                基礎代謝 <textarea name="" id="taisha" cols="1" rows="1"></textarea>
             </div>
 
             <div>
@@ -53,9 +53,11 @@
             <!-- <div id="output"></div> -->
         </div>
 
-        <div id="menu_history">
-
+        <div id="choice">
+            <h1>今日の夜は何マック？！
+            </h1>
         </div>
+
         朝マック　
         <select id="morning_menu" multiple size="3">
             <option value="maffin">ソーセージエッグマフィン</option>
@@ -82,13 +84,18 @@
             <img id="img3" src="">
         </div>
 
+        <div id="remcal"></div>
+
+
+
     </main>
 
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Chart.JS -->
     <script script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
+    <!--   JSON  -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
@@ -122,6 +129,12 @@
         let weights = [77, 77.4, 77.8, 79, 77.8, 77.6, 77.5];
         const today = new Date();
         const todaydate = today.getDay();
+        let mcal;
+        let lcal;
+        let ncal;
+        let ttlcal;
+        let rmcal;
+        let rmmenu;
 
         //送信ボタンが押されたらデータをDBに送信する
         $("#send").on("click", function () {
@@ -148,6 +161,7 @@
             const mytaisha = (66.47 + wX * 13.75 + height * 5.0 - age * 6.76) * 1.3;
             console.log(mytaisha);
             document.getElementById("taisha").innerHTML = mytaisha + "kcal";
+            localStorage.setItem('mytaisha', mytaisha);
 
             // /チャートのデータを更新/
             const ctx = document.getElementById('myChart');
@@ -173,40 +187,51 @@
         })
 
         // 朝マックと昼マックを選択するとマック画像が表示され、夜マックがサジェストされる  
-        let nightcal=0;
 
-        $("#morning_menu").on("click",function(){
+        $("#morning_menu").on("click", function mb() {
             let mb = $("#morning_menu").val();
-            console.log(mb);
-            if(mb=="maffin"){img1.src = "./images/4040maffin.png"; nightcal =+ 100}
-            else if (mb=="hash"){img1.src = "./images/5010hash.png"; nightcal =+ 200}
-            else if (mb== "griddle"){img1.src = "./images/8642griddle.png"; nightcal =+ 300};
-            return nightcal;
-            return mb;
+            if (mb == "maffin") { img1.src = "./images/4040maffin.png"; mcal = + 477 }
+            else if (mb == "hash") { img1.src = "./images/5010hash.png"; mcal = + 145 }
+            else if (mb == "griddle") { img1.src = "./images/8642griddle.png"; mcal = + 545 };
+            localStorage.setItem('mcal', mcal);
         });
-        
- 
 
-        $("#lunch_menu").on("click",function(){
+
+
+        $("#lunch_menu").on("click", function () {
             let lb = $("#lunch_menu").val();
-            console.log(lb);
-            if(lb=="teriyaki"){img2.src = "./images/1010teriyaki.png"; return nightcal}
-            else if (lb=="dbcheese"){img2.src = "./images/1360dbcheese.png"}
-            else if (lb== "bigmac"){img2.src = "./images/1210Bigmac.png"};
-            return lb;
+            if (lb == "teriyaki") { img2.src = "./images/1010teriyaki.png"; lcal = + 487 }
+            else if (lb == "dbcheese") { img2.src = "./images/1360dbcheese.png"; lcal = + 458 }
+            else if (lb == "bigmac") { img2.src = "./images/1210Bigmac.png"; lcal = + 526 };
+            localStorage.setItem('lcal', lcal);
         });
 
-        $("#dinner_menu").on("click",function(){
+        $("#dinner_menu").on("click", function () {
             let db = $("#dinner_menu").val();
-            console.log(db);
-            if(mb=="hash" && lb == "teriyaki"){
-            if (db=="hokkaido"){img3.src = "./images/1134 hokkaido.png"; return nightcal}
-            else if (db=="osaka"){img3.src = "./images/1135Osaka.png"}
-            else if (db== "hakata"){img3.src = "./images/1136hakata.png"};
-            }
-            else {img3.src = "./images/ngimg.png"}
+            if (db == "hokkaido") { img3.src = "./images/1134 hokkaido.png"; ncal = + 500 }
+            else if (db == "osaka") { img3.src = "./images/1135Osaka.png"; ncal = + 560 }
+            else if (db == "hakata") { img3.src = "./images/1136hakata.png"; ncal = + 526 };
+            localStorage.setItem('ncal', ncal);
+            ttlcal = mcal + lcal + ncal;
+            rmcal = Math.floor(localStorage.getItem('mytaisha') - ttlcal);
+
+            // 残カロリー内で最大カロリーバーガーをDBから引っ張ってきてサジェストする
+            axios.get("./calory.json").then(function (res) {
+                const menus = res.data;
+                const menu = [menus.calory];
+                const Maxmenu = Math.max(menus.calory);
+
+                console.log(menu)
+                // users配列を1個ずつ繰り返し処理
+
+            });
+
+            $("#remcal").append(`<p>あなたは本日${rmcal}kcal を節約！ </p>
+            <p>まだこれも食べて大丈夫！${rmmenu}</p>`);
         });
-        
+
+
+
 
 
 
