--- a/JS competition/Mcdmater.html
+++ b/JS competition/Mcdmater.html
@@ -72,10 +72,10 @@
         </select>
 
         夜マック　
-        <select id="dinner_menu" multiple size="3">
+      <select id="dinner_menu" multiple size="3">
             <option value="hokkaido">北海道じゃがバタてりやき</option>
             <option value="osaka">大阪お好み焼き風ソースたまごてりやき</option>
-            <option value="hakata">博多明太てりやきチキン</option>
+            <option value="hakata">博多明太てりやきチキン</option>  
         </select>
 
         <div id="menu_choice">
@@ -108,7 +108,7 @@
             from "https://cdnjs.cloudflare.com/ajax/libs/firebase/9.23.0/firebase-database.min.js";
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "",
+            apiKey: "AIzaSyDXKfrd81_NeQPDUQS8Fy4P4nzS8MbNpDc",
             authDomain: "js-competition-f7974.firebaseapp.com",
             databaseURL: "https://js-competition-f7974-default-rtdb.firebaseio.com",
             projectId: "js-competition-f7974",
